fix endpoints and functions
